Php-设计模式-策略模式

--- a/php/设计模式/单例模式.md
+++ b/php/设计模式/单例模式.md
@@ -1,4 +1,3 @@
-
 # 单例模式
 ## 特点
 - 单例类只能有一个实例
@@ -13,9 +12,8 @@
 - 线程池
 ## 种类
 懒汉式单例、饿汉式单例、登记式单例
-```php
 
-<?php
+```php
 class Singleton
 {
     /**
@@ -32,7 +30,6 @@ class Singleton
         if (null === static::$instance) {
             static::$instance = new static();
         }
-
         return static::$instance;
     }
 
@@ -61,6 +58,8 @@ class Singleton
         return "helloWord";
     }
 }
+
+//只能静态方式取得实例，不能new 和 clone
 $test = Singleton::getInstance()->helloWord();
 var_dump($test);
 ```
