--- a/php/算法/冒泡排序.md
+++ b/php/算法/冒泡排序.md
@@ -1,9 +1,14 @@
-<?php
+# 冒泡排序
 
+冒泡排序大概的意思是依次比较相邻的两个数，然后根据大小做出排序，直至最后两位数
+由于在排序过程中总是小数往前放，大数往后放，相当于气泡往上升，所以称作冒泡排序
+涉及非相邻元素的位置交换，所以是不稳定的排序算法
+冒泡是从前往后冒，所以，每轮比较的次数也是逐渐减少的，最后一个数不用比较，其时间复杂度为O(n²)
+算法如下：
+
+```php
+<?php
 /**
- * 冒泡排序大概的意思是依次比较相邻的两个数，然后根据大小做出排序，
- * 直至最后两位数。由于在排序过程中总是小数往前放，大数往后放，相当于气泡往上升，所以称作冒泡排序
- * 冒泡是从前往后冒，所以，每轮比较的次数也是逐渐减少的，最后一个数不用比较，其时间复杂度为O(n²)，算法如下：
  * @param array $arr
  * @return array
  */
@@ -27,3 +32,4 @@ function sortM(array $arr): array
     return $arr;
 }
 var_dump(implode("<",sortM([1,-3,4,5,2,6,0])));
+```
