工厂模式：简单工厂，抽象工厂，工厂方法

--- a/php/设计模式/策略模式.md
+++ b/php/设计模式/策略模式.md
@@ -23,6 +23,7 @@
 interface TravelStrategy{
  public function travelAlgorithm();
 } 
+
 /**
  * 具体策略类(ConcreteStrategy)1：乘坐飞机
  */
@@ -56,27 +57,29 @@ class PersonContext{
  private $_strategy = null;
  
  public function __construct(TravelStrategy $travel){
- $this- _strategy = $travel;
+ $this->_strategy = $travel;
  }
+ 
  /**
  * 旅行
  */
  public function setTravelStrategy(TravelStrategy $travel){
- $this- _strategy = $travel;
+ $this->_strategy = $travel;
  }
  /**
  * 旅行
  */
  public function travel(){
- return $this- _strategy - travelAlgorithm();
+ return $this->_strategy->travelAlgorithm();
  }
 } 
+
 // 第一种方式-乘坐火车旅行
 $person = new PersonContext(new TrainStrategy());
-$person- travel();
+$person->travel();
 // 第二种方式-改骑自行车
-$person- setTravelStrategy(new BicycleStrategy());
-$person- travel();
+$person->setTravelStrategy(new BicycleStrategy());
+$person->travel();
 ?  
 ```
 
