冒牌排序的优化

--- a/php/算法/冒泡排序.md
+++ b/php/算法/冒泡排序.md
@@ -1,8 +1,7 @@
 # 冒泡排序
 
-冒泡排序大概的意思是依次比较相邻的两个数，然后根据大小做出排序，直至最后两位数
-由于在排序过程中总是小数往前放，大数往后放，相当于气泡往上升，所以称作冒泡排序
-涉及非相邻元素的位置交换，所以是不稳定的排序算法
+冒泡排序大概的意思是依次比较相邻的两个数，然后根据大小做出排序，直至最后两位数 由于在排序过程中总是小数往前放，
+大数往后放，相当于气泡往上升，所以称作冒泡排序 涉及非相邻元素的位置交换，所以是不稳定的排序算法
 冒泡是从前往后冒，所以，每轮比较的次数也是逐渐减少的，最后一个数不用比较，其时间复杂度为O(n²)
 算法如下：
 
@@ -21,12 +20,17 @@ function sortM(array $arr): array
     $len = count($arr) -1;
     // 循环需要冒泡的轮数
     for ($i = 0; $i < $len; $i++) {
+         $mark = true;//此处是一个优化点：当$i < $len 时，已经排完序了，直接结束
         // 循环每轮需要比较的次数
         for ($j = 0; $j < $len - $i; $j++) {
             // 大的数，交换位置，往后挪
             if ($arr[$j] > $arr[$j + 1]) {
                 list($arr[$j],$arr[$j + 1]) = [$arr[$j + 1],$arr[$j]];
+                $mark= false;
             }
+        }
+        if ($mark){
+            return $arr;
         }
     }
     return $arr;
