php设计模式-装饰器模式 、算法-插入排序法

--- a/php/设计模式/策略模式.md
+++ b/php/设计模式/策略模式.md
@@ -18,6 +18,7 @@
 * 定义一系列的算法,把每一个算法封装起来, 并且使它们可相互替换。本模式使得算法可独立于使用它的客户而变化
 */ 
 /**
+*  抽象策略角色，以接口实现
 * 出行旅游
 */
 interface TravelStrategy{
@@ -49,7 +50,7 @@ class BicycleStrategy implements TravelStrategy {
  }
 } 
 /**
- * 
+ * 环境角色
  * 环境类(Context):用一个ConcreteStrategy对象来配置。维护一个对Strategy对象的引用。可定义一个接口来让Strategy访问它的数据。
  * 算法解决类，以提供客户选择使用何种解决方案：
  */
@@ -59,7 +60,6 @@ class PersonContext{
  public function __construct(TravelStrategy $travel){
  $this->_strategy = $travel;
  }
- 
  /**
  * 旅行
  */
@@ -80,6 +80,6 @@ $person->travel();
 // 第二种方式-改骑自行车
 $person->setTravelStrategy(new BicycleStrategy());
 $person->travel();
-?  
+
 ```
 
