--- a/php/算法/选择排序.md
+++ b/php/算法/选择排序.md
@@ -1,7 +1,5 @@
 # 选择排序
 
-
-
 首先在未排序序列中找到最小（大）元素，存放到排序序列的起始位置
 然后，再从剩余未排序元素中继续寻找最小（大）元素，然后放到已排序序列的末尾
 以此类推，直到所有元素均排序完毕。
@@ -16,23 +14,25 @@
  * @param array $arr
  * @return array
  */
-function SelectSort(array $arr): array{
-    if(count($arr) <= 1){
+function SelectSort(array $arr): array
+{
+    $len = count($arr);
+    if ($len <= 1) {
         return $arr;
     }
     //控制最大循环次数,未排序区的第一个值
-    for($i=0;$i<count($arr);$i++){
+    for ($i = 0; $i < $len; $i++) {
         //假设最小的数的为未排序区的第一个数
         $min = $i;
         //拿未排序区的每一个值与最小数比较，总是记录最小的数，这样就可以找到未排序区的最小值
-        for($j=$i+1;$j<count($arr);$j++){
-            if($arr[$j] < $arr[$min]){
+        for ($j = $i + 1; $j < $len; $j++) {
+            if ($arr[$j] < $arr[$min]) {
                 $min = $j;
             }
         }
         //把未排序区的最小值与未排序区第一个数交换位置，也就是把未排序区中的最小值放到已排序区的后面
-        if($min != $i){
-            list($arr[$i],$arr[$min]) = [$arr[$min], $arr[$i]];
+        if ($min != $i) {
+            list($arr[$i], $arr[$min]) = [$arr[$min], $arr[$i]];
         }
     }
     return $arr;
