--- a/php/算法/插入排序.md
+++ b/php/算法/插入排序.md
@@ -2,7 +2,9 @@
 
 ## 原理
 
-通过构建有序序列，对于未排序数据，在已排序序列中从后向前扫描，找到相应位置并插入。**插入排序**在实现上，通常采用in-place排序（即只需用到 O(1) 的额外空间的排序），因而在从后向前扫描过程中，需要反复把已排序元素逐步向后挪位，为最新元素提供插入空间。
+通过构建有序序列，对于未排序数据，在已排序序列中从后向前扫描，找到相应位置并插入。**插入排序**在实现上，
+通常采用in-place排序（即只需用到 O(1) 的额外空间的排序），因而在从后向前扫描过程中，
+需要反复把已排序元素逐步向后挪位，为最新元素提供插入空间。
 
 ## 步骤
 
