--- a/php/设计模式/代理模式.md
+++ b/php/设计模式/代理模式.md
@@ -21,3 +21,37 @@
 
 - 和适配器模式的区别：适配器模式主要改变所考虑对象的接口，而代理模式不能改变所代理类的接口
 - 和装饰器模式的区别：装饰器模式为了增强功能，而代理模式是为了加以控制。
+
+```php
+abstract class Subject { // 抽象主题角色
+    abstract public function action();
+}
+class RealSubject extends Subject { // 真实主题角色
+    public function __construct() {}
+    public function action() {
+        echo '真实 action';
+    }
+}
+class ProxySubject extends Subject { // 代理主题角色
+    private $_real_subject = NULL;
+    public function __construct() {}
+    public function action() {
+        $this->_beforeAction();
+        if (is_null($this->_real_subject)) {
+            $this->_real_subject = new RealSubject();
+        }
+        $this->_real_subject->action();
+        $this->_afterAction();
+    }
+    private function _beforeAction() {
+        echo '在action前,我想干点啥....';
+    }
+    private function _afterAction() {
+        echo '在action后,我还想干点啥....';
+    }
+}
+// client
+$subject = new ProxySubject();
+$subject->action();
+
+```
