--- a/redis/穿透、击穿、雪崩理解以及解决方案.md
+++ b/redis/穿透、击穿、雪崩理解以及解决方案.md
@@ -4,16 +4,19 @@
 
 ### 描述
 
-是指查询一个数据库**一定不存在**的数据。正常的使用缓存流程大致是，数据查询先进行缓存查询，如果key不存在或者key已经过期，再对数据库进行查询，并把查询到的对象，放进缓存。如果数据库查询对象为空，则不放进缓存。
+是指查询一个数据库**一定不存在**的数据。正常的使用缓存流程大致是，数据查询先进行缓存查询，如果key不存在或者key已经过期，再对数据库进行查询，
+并把查询到的对象，放进缓存。如果数据库查询对象为空，则不放进缓存。
 
 ### 击穿场景
 
-查询数据库**id=-1**的数据，就是查询一定不存在的对象，就会每次都去查询数据库，而每次查询都是空，每次又都不会进行缓存。假如有恶意攻击，就可以利用这个漏洞，对数据库造成压力，甚至压垮数据库。即便是采用UUID，也是很容易找到一个不存在的KEY，进行攻击。
+查询数据库**id=-1**的数据，就是查询一定不存在的对象，就会每次都去查询数据库，而每次查询都是空，每次又都不会进行缓存。假如有恶意攻击，
+就可以利用这个漏洞，对数据库造成压力，甚至压垮数据库。即便是采用UUID，也是很容易找到一个不存在的KEY，进行攻击。
 
 ### 解决方案
 
 - 接口层增加校验，如用户鉴权校验，id做基础校验，id<=0的直接拦截
-- 采用缓存空值的方式，从缓存取不到的数据，在数据库中也没有取到，这时也可以将key-value对写为key-null，只是设定缓存有效时间可以设置短点，如60秒（设置太长会导致正常情况也没法使用）。这样可以防止攻击用户反复用同一个id暴力攻击
+- 采用缓存空值的方式，从缓存取不到的数据，在数据库中也没有取到，这时也可以将key-value对写为key-null，只是设定缓存有效时间可以设置短点，
+  如60秒（设置太长会导致正常情况也没法使用）。这样可以防止攻击用户反复用同一个id暴力攻击
 - 布隆过滤器是一种数据结构，更准确的说是一种概率型的数据结构，因为它能判断某个元素一定不存在或者是可能存在
   过布隆过滤器来快速的判断出一个key是否存在数据库中，如果可能存在再去数据库查询，如果布隆过滤器中不存在那么就需要再去数据库查询了
 - 预热
@@ -25,8 +28,10 @@
 
 ### 描述
 
-指**一个key非常热点**，在不停的扛着大并发，某一时刻段（大并发）**集中对这一个key**进行访问，当这个key在**失效的瞬间**，持续的大并发就穿破缓存，直接请求数据库，就像在一个屏障上凿开了一个洞。
-可以理解为**缓存中没有**但**数据库中有的数据**（一般是缓存时间到期），这时由于并发用户特别多，同时读缓存没读到数据，又同时去数据库去取数据，引起数据库压力瞬间增大，造成过大压力。
+指**一个key非常热点**，在不停的扛着大并发，某一时刻段（大并发）**集中对这一个key**进行访问，当这个key在**失效的瞬间**，持续的大并发就穿破缓存，
+直接请求数据库，就像在一个屏障上凿开了一个洞。
+可以理解为**缓存中没有**但**数据库中有的数据**（一般是缓存时间到期），这时由于并发用户特别多，同时读缓存没读到数据，又同时去数据库去取数据，
+引起数据库压力瞬间增大，造成过大压力。
 
 ### 解决方案
 
