redis 基础介绍、更新缓存方式

--- a/redis/布隆过滤器.md
+++ b/redis/布隆过滤器.md
@@ -2,11 +2,12 @@
 
 ## 描述
 
-一种数据结构，是由一串很长的二进制向量组成，可以将其看成一个二进制数组。既然是二进制，那么里面存放的不是0，就是1，但是初始默认值都是0。
+一种数据结构，布隆过滤器底层是一个64位的整型,是由一串很长的二进制向量组成，可以将其看成一个二进制数组。
+既然是二进制，那么里面存放的不是0，就是1，但是初始默认值都是0。
 
 ### 添加数据
 
-当要向布隆过滤器中添加一个元素key时，通过多个hash函数，算出一个值，然后将这个值所在的方格置为1。
+当要向布隆过滤器中添加一个元素key时，通过多个hash函数，算出一个值，然后映射在的将这个值置为1。
 
 ![img](https://img2020.cnblogs.com/blog/1120165/202003/1120165-20200330221613591-2062171492.png)
 
